@startuml

title __ENSYNC's Class Diagram__\n

  namespace com.olexyn.ensync {
    class com.olexyn.ensync.Execute {
        + execute()
        + execute()
        + executeBatch()
    }
  }
  

  namespace com.olexyn.ensync {
    class com.olexyn.ensync.Execute.TwoBr {
        + error : BufferedReader
        + output : BufferedReader
    }
  }
  

  namespace com.olexyn.ensync {
    class com.olexyn.ensync.Flow {
        - state : String
        + getState()
        + run()
        - readOrMakeStateFile()
    }
  }
  

  namespace com.olexyn.ensync {
    class com.olexyn.ensync.Main {
        {static} + FLOW_THREAD : Thread
        {static} + MAP_OF_SYNCMAPS : HashMap<String, SyncMap>
        {static} + UI_THREAD : Thread
        {static} + main()
    }
  }
  

  namespace com.olexyn.ensync {
    class com.olexyn.ensync.Tools {
        + Tools()
        + brToListString()
        + brToString()
        + fileToLines()
        + mapMinus()
        + stateFilePath()
        + stringListToSb()
        + writeSbToFile()
        + writeStringListToFile()
    }
  }
  

  com.olexyn.ensync.Execute +-down- com.olexyn.ensync.Execute.TwoBr
  com.olexyn.ensync.Flow .up.|> java.lang.Runnable
  com.olexyn.ensync.Flow o-- com.olexyn.ensync.Tools : tools
  com.olexyn.ensync.Tools o-- com.olexyn.ensync.Execute : x


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
